--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "gray-matter": "^4.0.3",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
